Remove broken parsing of `@media` rules.
There is some incomplete code that ignores a @media
rule's media_list, and unconditionally inclues of all of the rule's statements into the current ruleset. MR upcoming to remove that.
The default theme doesn't use @media
rules since they are not supported anyway.